# openmeat

./: CMakeLists.txt  README.md  tests.sh
.github/workflows/: build.yml  cpplint.yml
doc/protocol/: community.md  perks.md  ressources.md  stream.md  types.md
doc/protocol/opcodes/: 1a02.md  1a08.md  1a0c.md  1a1a.md  1c01.md  1c11.md  3c03.md  6906.md  694b.md  6952.md  b001.md  b002.md  b005.md  b006.md
hook/: hook.cpp  hook.hpp
lib/: CMakeLists.txt  opcodes.hpp  openmeat.pc.in  packet.cpp  packetreader.cpp  packetwriter.cpp  socket.cpp  utils.cpp
lib/include/openmeat/: opcodes  packet  socket
proxy/: callback.cpp  callback.hpp  main.cpp  opcodes.hpp  packet.cpp  packet.hpp  proxy.cpp  proxy.hpp  serial.cpp  serial.hpp
src/proxyhook/: hook.cpp  proxyhook.cpp  proxyhook.hpp
tests/: CMakeLists.txt  main.cpp  packet.cpp  packetreader.cpp  packetwriter.cpp  socket.cpp  utils.cpp
tools/: break_obfuscation_stage1.py
tools/deobfuscation/: README.md  bloader  break_loader.py
tools/dissector/: CMakeLists.txt  README.md  packet-deadmaze.c
tools/hook/: CMakeLists.txt  README.md  hook.c
tools/key_finder/: CMakeLists.txt  README.md  main.cpp
tools/proxy/: README.md  deadmaze.py  injector.py  parser.py  proxy.py  run
tools/py_proxy/: proxy.py
